# open-webui

./: .gitignore  .npmrc.tmp  CHANGELOG.md  add-missing-imports.cjs  build-no-gil.sh  build.sh  eslint.config.js  fix-i18n.cjs  fix-misplaced-imports.cjs  hatch_build.py  ntfy_llm_bot.py  package-lock.json  package-test.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.gemini/: test_fixes_summary.md
backend/: dev.sh  mypy.ini  requirements.txt  start.sh
backend-rust/: .env.example  .gitignore  ARCHITECTURE.md  COMPARISON.md  Cargo.toml  Dockerfile  FINAL_SUMMARY.md  MIGRATION_GUIDE.md  PROGRESS.md  README.md  SUMMARY.md  TESTING.md  build-with-frontend.sh  start.sh
backend-rust/migrations/: 20250101000000_initial_schema.sql
backend-rust/src/: config.rs  database.rs  main.rs
backend-rust/src/middleware/: auth.rs  mod.rs
backend-rust/src/models/: auth.rs  auth_db.rs  chats.rs  chats_db.rs  messages.rs  messages_db.rs  mod.rs  models.rs  users.rs  users_db.rs
backend-rust/src/routers/: audio.rs  auth.rs  chats.rs  evaluations.rs  files.rs  functions.rs  images.rs  knowledge.rs  memory.rs  mod.rs  models.rs  ollama.rs  openai.rs  pipelines.rs  rag.rs  scim.rs  tasks.rs  users.rs
backend-rust/src/utils/: errors.rs  jwt.rs  mod.rs  password.rs
docs/: 1.py  2.py  3.py  4.py  4ms.py  5.context7.mcp.py  5.py  5.sp.py  6.mcp.py  6.mcp.sp.force.py  6.mcp.sp.py  6.shit.py  7.py  CLOUDFLARE_IMGBED.md  badmcp.py  file_io_tool.py  gemini_image_generator.py  lite-bug.py  ntfy.py  sp.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  (+1 more)
(+631 files in other folders)
