[package]
name = "open-webui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "uuid", "chrono", "json"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"

# Configuration
dotenv = "0.15"
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
envy = "0.4"

# File type detection
mime_guess = "2.0"

# Base64 encoding
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
